app/assets/stylesheets/generic.css.scss
@mixin opacity($trans) {
  filter: alpha(opactiy=($trans * 100));
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=#{$trans * 100})";
  -moz-opacity: $trans;
  -khtml-opacity: $trans;
  opacity: $trans;
}


input.link_button, input.link_button:focus, input.link_button:active {
    /* Remove all decorations */
    border: none;
    display: inline;
    margin: 0em;
    padding: 0em;
    outline: none;
    outline-offset: 0em;
    /* Look like a link */
    background: none;
    color: blue;
    cursor: pointer;
    font: inherit;
    text-decoration: underline;
		margin-left: 14px;
}
/* Remove extra space inside buttons in Firefox */
input.link_button::-moz-focus-inner {
    border: none;
    padding: 0em;
}

div#messagesDiv{
	width: 400px;
	height: 200px;
	border: 1px solid black;
}

del{
  color: red;
}
ins{
  color: green;
}

div.attachment_form
  input { display: block;}



$rating_width: 300px;
$rating_height: 40px;
$rating_handle_height: 18px;
.clear{
  clear: both;
}
div.rating{
  div.rating-slider{
    cursor: pointer;
    float: left;
    width: $rating_width;
    position: relative;
    //border: 1px solid red;
    width: $rating_width;
    div.handle {
      width: $rating_handle_height;
      height: $rating_handle_height;
      position: absolute;
      top: $rating_height/2 - $rating_handle_height/2;
      left: 50%;
      background: image-url('slider-star-pointer.png') no-repeat 0 0
    }
  }
  .vote_count{
    float: left;
    margin-top: 4px;
    margin-left: 8px;
    div.count{
      font-weight: bold;
      font-size: 1.4em;
    }
    div.lbl{
      font-weight: normal;
      font-size: 1em;
    }
  }
}
div.comment-form{
  //border: 1px solid green;
  //width: 330px;
  //padding: 18px 10px 10px 10px;
  position: relative;
  div.edit-bar{
    border: 1px solid yellow;
  }

  input[type=text]{
    display: block;
  }
  textarea{
    width: 100%;
    height: 80px;
    max-height: 300px;
  }
  div.attachment_form{
    float: left;
    width: 16px;
    height: 16px;
    form{
      background: image-url('attachment16.gif') no-repeat 0 0;
      cursor: pointer;
      input{
        opacity: 0;
        width: 16px;
        height: 16px
      }
    }
    iframe{
      display: none;
      width: 300px;
      height: 100px;
      border: 1px solid red;
    }
  }
  div.progress-bar{
    float: left;
    span{
      margin-left: 10px;
    }
  }
  div.attachments{
    div.attachment{
      position: relative;
      width: 68px;
      //border: 1px solid blue;
      float: left;
      margin: 0 10px 10px 0;
      img.icon{
        width: 50px;
        height: 50px;
        //border: 1px solid red;
      }
      img.delete{
        background: image-url('circle_x_sm.gif') no-repeat 0 0;
        position: absolute;
        top: 0;
        right: 0px;
        height: 16px;
        width: 16px;
        cursor: pointer;
      }
      p.name{
        line-height: .9;
        margin-top: 4px;
        font-size: .8em;
        word-wrap: break-word;
      }
    }
  }
  div.form_ctrls{
    position: relative;
    .char-ctr{
      position: absolute;
      top: 0;
      right: 0;
    }
  }
}

div.profile-photo-form{
  iframe{
    display: none;
  }
  div.progress-bar{
    float: left;
    span{
      margin-left: 10px;
    }
  }
}

.navbar-fixed-top{
  position: fixed;
  .navbar-inner{
    background: rgb(59,89,152);
    height: 30px;
    .user-bar{
      color: white;
      text-align: center;
      div.ce-user-bar{
        position: relative;
        background-color: rgb(59,89,152);
        .logo{
          color: white;
          img{
            display: block;
            margin-top: 5px;
            float: left;
            cursor: pointer;
          }
          .tagline{
            float: left;
            margin: 6px 0 0 40px;
          }
        }

        div.user{
          position: absolute;
          top: 0;
          right: 0;
          margin-right: 20px;
          i{ color: white;}
          i:hover{
            color: red;
          }
        }
      }
    }
  }
}

.container-fluid{
  padding-left: 40px;
  padding-right: 40px;
  .content{
    margin-top: 40px;
    background-color: white;

    .right-bar{
      border: 1px solid #ddd;
      min-height: 800px;
    }
  }
}

.row.test{
  div{
    height: 60px;
    background-color: #ccc;
  }
}

div.comment-outer{
  //border: 1px solid green;
  div.comment{
    div.author{
      text-align: right;
      div.com-num{
        color: #eed;
        font-size: 4em;
        margin-top: 30px;
        margin-right: 10px;
        font-style: italic;
      }
    }
    div.deleted-comment-author{
      div.com-num{
        font-size: 1.6em;
        margin-top: 0;
      }
    }

    p.author{
      color: #aaa;
      font-style: italic;
      margin: -6px 0 0 0;
    }

    div.attachments{
      div.attachment{
        position: relative;
        //border: 1px solid blue;
        float: left;
        margin: 4px 10px 8px 0;
        //img.icon{
        //  max-width: 400px;
        //}
        p.name{
          line-height: .9;
          margin: 4px 0 0 0;
          font-size: .8em;
          word-wrap: break-word;
        }
      }
    }
    .share{
      border: 1px solid #ddd;
      min-height: 20px;
    }
    p.controls{ text-align: right; margin: -10px 0 0 0; font-style: italic; opacity: .6;}
    .deleted-comment-body{ padding-bottom: 30px;
      > p {
        font-style: italic;
        opacity: .6
      }
    }
    div.rating{
      min-width: 360px;
      div.vote_count{
        max-width: 58px;
        margin-left: 20px
      }
    }
    &.ConversationComment div.rating{ padding-bottom: 40px; }
    &.SummaryComment div.rating{ padding-bottom: 0px; }

  }
}

div.ce-sortable-item-pair{
  margin: -24px;
  padding: 24px;
  div.ce-sortable-item-carrier{
    div.ce-sortable-item{
      position: relative;
      div.ce-sortable-handle{
        position: absolute;
        top: 0;
        left: -24px;
        cursor: move;
      }
    }
  }
  div.ce-sortable-placeholder{
    background-color: #ddd;
    display: none;
  }
}

div.ce-sortable-item-pair{
  div.ce-sortable-handle{
    display: none;
  }
  &:hover{
    div.ce-sortable-handle{
      display: inline-block;
    }
  }
}


.slide-enter-active, .slide-leave-active {
  //.slide-enter, .slide-leave {
  //.slide-enter, .slide-leave, .slide-enter-active, .slide-leave-active {
  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .5s;
  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .5s;
  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .5s;
  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .5s;
}

.slide-leave {
  opacity: 0;
  height: 0;
}
.slide-leave.slide-leave-active  {
  opacity: 0;
  height: 0;
}

.slide-enter {
  opacity: 0;
  height: 0;
}
.slide-enter.slide-enter-active {
  opacity: 1;
  height: 200px;
}

div.ani-slide{
  overflow: hidden;
  > div{
    min-height: 200px;
  }
}

.issue{
  > p{ font-style: italic;}
}

body.drag_in_process{
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.warn{
  color: red;
  font-weight: bold;
}

